# MiniNec-Rs

./: Cargo.toml  README.md
.github/: copilot-instructions.md
TestData/: antenna.json  badsource.json  endfed.json  error.json  folded.json  vertical.json
doc/: Algorithm.md  AlgorithmExplained.md  MaxwellEquations.md
src/: geometry.rs  geometry_file.rs  integrate.rs  main.rs  quadrature.rs
src/geometry/: geometry_file.rs  mod.rs  model.rs  pulse_compiler.rs  segments_compiler.rs
src/physics/: kernel.rs  mod.rs  system_builder.rs
